chore(swagger): update swagger docs
